--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     - auth:
         password: $DOCKER_PASSWORD
         username: $DOCKER_USERNAME
-      image: trussworks/circleci:6986bb9022e5a83599feb66a7128a2d0fa12732a
+      image: trussworks/circleci
     steps:
     - checkout
     - restore_cache:
