--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,5 +27,5 @@ repos:
     hooks:
       - id: golangci-lint
         args:
-          - --timeout 3m
+          - "--timeout 3m"
           - --verbose
